# DRM_BERRIZ

./: .gitignore  GetClearKey.py  GetMediaList.py  PlaybackInfo.py  PublicInfo.py  README.md  berriz_drm.py  cookies.py  download.py  drm.py  main.py  msprpro.py  pssh.py  pyproject.toml  requirements.txt  setting.json  temp.json  temp_playbackinfo_printer.py  test.py
LARLEY_PR/: README.md  playready.py  pyproject.toml  requirements.txt  serve.example.yml
LARLEY_PR/pyplayready/: __init__.py  cdm.py  drmresults.py  (+2 more)
WVD/: widevine.py
config/: berrizconfig.yaml
cookies/: account.yaml  bz_a.txt  cookies.py  refresh_time.txt
image/: parse_playback_contexts.py
key/: GetClearKey.py  cdrm.py  local_key_vault.db  local_key_vault.pkl  local_vault.py  msprpro.py  pssh.py  watora.py
lib/: GetMediaList.py  Proxy.py  __init__.py  berriz_drm.py  click_types.py  download.py  hls_download.py  load_yaml_config.py  lock_cookie.py  media_queue.py  merge.py  processbar.py  rename.py  save_json_data.py  video_folder.py
lock/: donwnload_lock.py  download_info.pkl
mystate/: fanclub.py  parse_my.py
static/: Board_from.py  Notice.py  PlaybackInfo.py  PublicInfo.py  api_error_handle.py  args.py  artis.json  artis_keys.json  color.py  community_keys.json  community_name.json  example.env  help.py  parameter.py  route.py
unit/: GetArtisList.py  GetMediaList.py  GetNotifyList.py  __init__.py  berriz_drm.py  color.py  community.py  data.py  handle_board_from.py  handle_choice.py  handle_log.py  main_process.py  media_json_process.py  parameter.py  process_data.py  user_choice.py
(+93 files in other folders)
